--- a/src/App/templates/app/home-page.phtml
+++ b/src/App/templates/app/home-page.phtml
@@ -7,13 +7,13 @@
 	<form action="<?=$this->url('app.login')?>" method="post">
 		<div class="form-group">
 			<label for="exampleInputEmail1">Username</label> <input
-				type="number" class="form-control" id="username"
+				type="text" class="form-control" id="username" name="username"
 				aria-describedby="usernameHelp" placeholder="Enter username" autofocus="autofocus"> <small
 				id="emailHelp" class="form-text text-muted">Fill this field with your username.</small>
 		</div>
 		<div class="form-group">
 			<label for="password">Password</label> <input
-				type="password" class="form-control" id="password"
+				type="password" class="form-control" id="password" name="password"
 				placeholder="Enter password">
 		</div>
 		<button type="submit" class="btn btn-primary">Login</button>
