--- a/src/App/templates/app/namespace-partial.phtml
+++ b/src/App/templates/app/namespace-partial.phtml
@@ -6,7 +6,7 @@
 		<div class="form-group">
 			<label for="namespace">Namespace</label> <input type="text"
 				class="form-control" id="namespace" name="namespace"
-				aria-describedby="emailHelp" placeholder="Enter namespace"> <small
+				aria-describedby="namespaceHelp" placeholder="Enter namespace"> <small
 				id="namespaceHelp" class="form-text text-muted">Type a namespace.</small>
 		</div>
 		<div class="form-check">
