--- a/src/App/templates/app/replicasets-partial.phtml
+++ b/src/App/templates/app/replicasets-partial.phtml
@@ -1,8 +1,8 @@
 <div class="col-md-4 blackbox">
 	<h2>
-		<i class="fa fa-exchange-alt"></i> ResourceQuota
+		<i class="fa fa-exchange-alt"></i>Replica Sets
 	</h2>
-	<form id="form-resourcequota">
+	<form id="form-replicasets">
 		<div class="form-group">
 			<label for="namespace">Namespace</label> <input type="text"
 				class="form-control" id="namespace" name="namespace"
@@ -11,10 +11,10 @@
 		</div>
 		<div class="form-check">
 			<input type="checkbox" class="form-check-input"
-				id="resourcequota-object" name="resourcequota-object"> <label
-				class="form-check-label" for="resourcequota-object">Complete object</label>
+				id="replicasets-object" name="replicasets-object"> <label
+				class="form-check-label" for="replicasets-object">Complete object</label>
 		</div>
 	</form>
-	<button class="resourcequota_button btn btn-primary">Get data</button>
+	<button class="replicasets_button btn btn-primary">Get data</button>
 	<button class="clear_result_button btn btn-primary">Clear</button>
 </div>
