--- a/src/App/templates/app/volumes-partial.phtml
+++ b/src/App/templates/app/volumes-partial.phtml
@@ -1,20 +1,20 @@
 <div class="col-md-4 blackbox">
 	<h2>
-		<i class="fa fa-exchange-alt"></i> ResourceQuota
+		<i class="fa fa-exchange-alt"></i>Volumes
 	</h2>
-	<form id="form-resourcequota">
+	<form id="form-volumes">
 		<div class="form-group">
 			<label for="namespace">Namespace</label> <input type="text"
 				class="form-control" id="namespace" name="namespace"
-				aria-describedby="namespaceHelp" placeholder="Enter namespace"> <small
+				aria-describedby="emailNamespace" placeholder="Enter namespace"> <small
 				id="namespaceHelp" class="form-text text-muted">Type a namespace.</small>
 		</div>
 		<div class="form-check">
 			<input type="checkbox" class="form-check-input"
-				id="resourcequota-object" name="resourcequota-object"> <label
-				class="form-check-label" for="resourcequota-object">Complete object</label>
+				id="volumes-object" name="volumes-object"> <label
+				class="form-check-label" for="volumes-object">Complete object</label>
 		</div>
 	</form>
-	<button class="resourcequota_button btn btn-primary">Get data</button>
+	<button class="volumes_button btn btn-primary">Get data</button>
 	<button class="clear_result_button btn btn-primary">Clear</button>
 </div>
